renamed navbar template, bug with collapsing navbar in pages other than index

--- a/src/KULTURBIDEAK/kulturbideak_app/static/css/brandy/css/style.css
+++ b/src/KULTURBIDEAK/kulturbideak_app/static/css/brandy/css/style.css
@@ -410,10 +410,12 @@ padding-top: 10px;
 /*Footer*/
 footer{
 	background-color: #f1f1f1;
-	padding-top: 50px;
-	padding-bottom: 50px;
+	/*padding-top: 20px;*/
+	/*padding-bottom: 50px;*/
 }
-.footer_logo{}
+.footer_logo{
+	padding: 10px 0px;
+}
 .footer_logo img{}
 .social{
 	padding-top: 65px;
